<resources>
    <string name="app_name">jetpack 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="movie">Movie</string>
    <string name="tvShow">Tv Show</string>
    <string name="description">Description</string>
</resources>